# isolatedDesign

./: .gitignore  1.MotorValidator.cpp  2.MotorChecks.cpp  CMakeLists.txt  Data.cpp  MotorCheck.cpp  Responsibility  Responsiblity  Responsiblity.cpp  main  main.c  main.cpp
0.archive/: main  main.cpp
0.archive/CommsCode/: A_CommsList.h  C_commsObjects.h  gdbmain
0.archive/XDefine/: main  main.cpp
0.archive/enumXmacro/: main.preprocessed
0.archive/forlooptests/: main.cpp
0.archive/stroken/: main.cpp
BOOSTSML/: AdminEvents.h  AdminFSMObjects.cpp  AdminFSMObjects.h  AdminTable.h  EventsBridge.h  FSMAdminFunctors.h  boost_SML.h  comms.cpp  comms.h  eepromStore.cpp  eepromStore.h  fsm.h  main  main.cpp  sharedPtr.cpp  sharedPtr.h  temp  temp.cpp
BoostMSM/: main  main.cpp  msfsm.hpp
CommsCode/: A_CommsList.cpp  A_CommsList.h  B_commschecklist.cpp  B_commschecklist.h  C_commsObjects.cpp  CommsList.cpp  main  main.cpp
CommsStateMchine.cpp/: main  main.cpp
FunctionPointerTest/: main  main.cpp  singleton.cpp  singleton.h
HardwareCode/: 1.hardwaredata.cpp  A_HardwareData.cpp  B_Hardware_COR_Base.cpp  C_HardwareSetup.cpp  D_HardwareRoutines.cpp  Z_ControllerManager.cpp  hardware.cpp  hardwareRoutines.cpp  main  main.cpp
RelayCOde/: 1.MotorValidator.cpp  README.md  Responsiblity  a.out  main
TM/: main  main.cpp
XDefine/: newheader.cpp
c_statemachine/: main  main.c
enumXmacro/: main  main.cpp
interview/: main  main.cpp
java/: CibsumerProducer.java  ConsumerProducer.java
sockets/: client  client.c  report.xml  server  server.c
(+20 files in other folders)
